Spacing above resolve all box

--- a/app/assets/stylesheets/pages/notes.scss
+++ b/app/assets/stylesheets/pages/notes.scss
@@ -385,6 +385,7 @@ ul.notes {
 }
 
 .line-resolve-all {
+  margin-top: 10px;
   padding: 10px;
   border: 1px solid $border-color;
   border-radius: $border-radius-default;
